# milvus-1

./: .env  .env.backup  .env.example  .gitignore  AGENT_README.md  CLAUDE.md  IMPLEMENTATION_CHANGELOG.md  IMPLEMENTATION_STATUS.md  LANGGRAPH_AGENT_DESIGN.md  LANGGRAPH_USAGE.md  QUICK_START.md  VOLCANO_LLM_INTEGRATION.md  concept_search_app.py  create_milvus_collection.py  etl_csv_to_milvus.py  example_langgraph_agent.py  langgraph_agent_cli.py  main.py  milvus_database_utils.py  natural_language_agent.py  pampers_event - 副本.csv  pampers_event.csv  pampers_event_metadata.csv  pampers_metadata - 副本.csv  pampers_metadata.csv  pampers_profile_metadata.csv  prompt.txt  pymilvus_api_reference.md  pyproject.toml  run_benchmark.py  test_agent.py  test_import.py  test_llm_extractor.py  test_public_models.py  规则群组_测试用例.xlsx
.claude/: settings.local.json
doc/: AGENTS.md  AGENT_README.md  DATABASE_INFO.md  DEPENDENCIES.md  FIX_SUMMARY.md  IMPLEMENTATION_CHANGELOG.md  IMPLEMENTATION_STATUS.md  LANGGRAPH_AGENT_DESIGN.md  LANGGRAPH_USAGE.md  QUICK_START.md  USAGE_GUIDE.md  VOLCANO_LLM_INTEGRATION.md
old/: concept_search_app.py  example_langgraph_agent.py  logging_config.py  natural_language_agent.py  nl_query_agent.py  query_processor.py  result_analyzer.py  run_benchmark.py  utils.py
src/: __init__.py  config.py  embedding_manager.py  exceptions.py  llm_extractor.py  logging_config.py  milvus_client.py  nl_query_agent.py  prompt.txt  query_processor.py  result_analyzer.py  utils.py  volcano_models.py
src/langgraph_agent/: __init__.py  graph.py  state.py
src/langgraph_agent/nodes/: __init__.py  aggregate_node.py  event_attr_node.py  event_node.py  intent_node.py  profile_node.py  router.py
test/: test_agent.py  test_bge_m3.py  test_collections.py  test_correct_api.py  test_dependencies.py  test_fix.py  test_import.py  test_improvement.py  test_langgraph_agent.py  test_llm_extractor.py  test_milvus.py  test_public_models.py  test_query_processor.py  test_similarity.py  test_vector_search.py
